fix get users
