# docs/swagger.json
@@ -32,7 +32,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.User"
+                                "$ref": "#/definitions/entity.User"
                             }
                         }
                     },
@@ -44,19 +44,43 @@
         }
     },
     "definitions": {
-        "main.User": {
+        "entity.User": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "address": {
+                    "type": "string"
+                },
+                "contact": {
                     "type": "string"
                 },
                 "email": {
+                    "type": "string"
+                },
+                "email_verified_at": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "office": {
+                    "type": "integer"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "photo": {
+                    "type": "string"
+                },
+                "remember_token": {
+                    "type": "string"
+                },
+                "staff_id": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
